# booEdit

./: CMakeLists.txt  build  clean  debug  gather  require_built  run  run_tests  run_tests_with_memcheck  run_with_memcheck
src/: #EditorView.cpp#  .BackspaceCommand.hpp.swp  .DeleteLineCommand.hpp.swp  .MoveCursorRight.hpp.swp  BackspaceCommand.hpp  BooEdit.cpp  BooEdit.hpp  Command.hpp  CommandProcessor.cpp  CommandProcessor.hpp  DeleteLineCommand.hpp  Editor.cpp  Editor.hpp  EditorException.hpp  EditorView.cpp  EditorView.hpp  InsertKey.hpp  Keypress.cpp  Keypress.hpp  MoveCursorDown.hpp  MoveCursorEnd.hpp  MoveCursorHome.hpp  MoveCursorLeft.hpp  MoveCursorRight.hpp  MoveCursorUp.hpp  NewLineCommand.hpp  main.cpp
test/: testmain.cpp
